--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,6 +770,11 @@ img {
   position: relative;
 }
 
+.sticky{
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .top-3{
   top: 0.75rem;
 }
@@ -786,12 +791,12 @@ img {
   left: 0px;
 }
 
-.-left-32{
-  left: -8rem;
-}
-
 .top-10{
   top: 2.5rem;
+}
+
+.-right-3{
+  right: -0.75rem;
 }
 
 .top-1{
@@ -818,28 +823,52 @@ img {
   right: 1rem;
 }
 
-.top-8{
-  top: 2rem;
+.top-20{
+  top: 5rem;
 }
 
-.top-9{
-  top: 2.25rem;
+.top-14{
+  top: 3.5rem;
 }
 
-.-left-3{
-  left: -0.75rem;
+.-right-6{
+  right: -1.5rem;
 }
 
-.-right-3{
-  right: -0.75rem;
+.-right-8{
+  right: -2rem;
 }
 
 .-right-2{
   right: -0.5rem;
 }
 
-.-right-4{
-  right: -1rem;
+.-right-0{
+  right: -0px;
+}
+
+.right-10{
+  right: 2.5rem;
+}
+
+.top-8{
+  top: 2rem;
+}
+
+.top-5{
+  top: 1.25rem;
+}
+
+.right-5{
+  right: 1.25rem;
+}
+
+.-left-0{
+  left: -0px;
+}
+
+.-left-full{
+  left: -100%;
 }
 
 .z-\[3\]{
@@ -874,6 +903,18 @@ img {
   grid-column: span 12 / span 12;
 }
 
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+
+.col-span-4{
+  grid-column: span 4 / span 4;
+}
+
+.m-0{
+  margin: 0px;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -897,6 +938,11 @@ img {
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .mt-4{
@@ -951,6 +997,22 @@ img {
   margin-bottom: 0.75rem;
 }
 
+.mb-12{
+  margin-bottom: 3rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
+}
+
+.ml-0{
+  margin-left: 0px;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -969,6 +1031,14 @@ img {
 
 .hidden{
   display: none;
+}
+
+.h-28{
+  height: 7rem;
+}
+
+.h-64{
+  height: 16rem;
 }
 
 .h-12{
@@ -1003,16 +1073,16 @@ img {
   height: auto;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
 .h-7{
   height: 1.75rem;
 }
 
 .h-16{
   height: 4rem;
-}
-
-.h-10{
-  height: 2.5rem;
 }
 
 .h-14{
@@ -1027,16 +1097,32 @@ img {
   height: 1.25rem;
 }
 
-.h-64{
-  height: 16rem;
+.h-56{
+  height: 14rem;
+}
+
+.h-60{
+  height: 15rem;
+}
+
+.h-72{
+  height: 18rem;
+}
+
+.h-40{
+  height: 10rem;
+}
+
+.h-6{
+  height: 1.5rem;
+}
+
+.h-20{
+  height: 5rem;
 }
 
 .h-24{
   height: 6rem;
-}
-
-.h-28{
-  height: 7rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -1051,6 +1137,14 @@ img {
   min-height: calc(100vh - 4rem);
 }
 
+.w-28{
+  width: 7rem;
+}
+
+.w-72{
+  width: 18rem;
+}
+
 .w-full{
   width: 100%;
 }
@@ -1059,12 +1153,12 @@ img {
   width: 75%;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
 .w-1\/3{
   width: 33.333333%;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .w-96{
@@ -1075,16 +1169,8 @@ img {
   width: 60%;
 }
 
-.w-28{
-  width: 7rem;
-}
-
 .w-3{
   width: 0.75rem;
-}
-
-.w-72{
-  width: 18rem;
 }
 
 .w-7{
@@ -1115,16 +1201,32 @@ img {
   width: 1.25rem;
 }
 
-.w-screen{
-  width: 100vw;
+.w-6{
+  width: 1.5rem;
 }
 
-.w-48{
-  width: 12rem;
+.w-20{
+  width: 5rem;
 }
 
-.w-24{
-  width: 6rem;
+.w-32{
+  width: 8rem;
+}
+
+.w-1{
+  width: 0.25rem;
+}
+
+.w-10{
+  width: 2.5rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
+.w-16{
+  width: 4rem;
 }
 
 .min-w-full{
@@ -1149,14 +1251,6 @@ img {
 
 .grow{
   flex-grow: 1;
-}
-
-.table-auto{
-  table-layout: auto;
-}
-
-.border-collapse{
-  border-collapse: collapse;
 }
 
 .origin-top-right{
@@ -1224,8 +1318,10 @@ img {
   resize: both;
 }
 
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .grid-cols-2{
@@ -1240,8 +1336,12 @@ img {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.grid-cols-10{
-  grid-template-columns: repeat(10, minmax(0, 1fr));
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -1260,6 +1360,10 @@ img {
   align-items: center;
 }
 
+.items-stretch{
+  align-items: stretch;
+}
+
 .justify-center{
   justify-content: center;
 }
@@ -1268,24 +1372,28 @@ img {
   justify-content: space-between;
 }
 
-.gap-12{
-  gap: 3rem;
+.justify-around{
+  justify-content: space-around;
+}
+
+.gap-10{
+  gap: 2.5rem;
 }
 
 .gap-4{
   gap: 1rem;
 }
 
-.gap-6{
-  gap: 1.5rem;
-}
-
 .gap-2{
   gap: 0.5rem;
 }
 
-.gap-10{
-  gap: 2.5rem;
+.gap-12{
+  gap: 3rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-3{
@@ -1300,24 +1408,16 @@ img {
   gap: 1.25rem;
 }
 
-.gap-56{
-  gap: 14rem;
+.gap-20{
+  gap: 5rem;
 }
 
-.gap-40{
-  gap: 10rem;
+.gap-y-4{
+  row-gap: 1rem;
 }
 
-.gap-32{
-  gap: 8rem;
-}
-
-.gap-24{
-  gap: 6rem;
-}
-
-.gap-36{
-  gap: 9rem;
+.gap-y-10{
+  row-gap: 2.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1380,10 +1480,6 @@ img {
   border-radius: 0.375rem;
 }
 
-.rounded-3xl{
-  border-radius: 1.5rem;
-}
-
 .border{
   border-width: 1px;
 }
@@ -1417,6 +1513,14 @@ img {
   border-left-width: 2px;
 }
 
+.border-l{
+  border-left-width: 1px;
+}
+
+.border-r{
+  border-right-width: 1px;
+}
+
 .border-solid{
   border-style: solid;
 }
@@ -1424,6 +1528,11 @@ img {
 .border-zinc-300{
   --tw-border-opacity: 1;
   border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .border-zinc-200{
@@ -1460,14 +1569,24 @@ img {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-gray-200{
+.border-blue-500{
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.border-zinc-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(161 161 170 / var(--tw-border-opacity));
 }
 
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -1478,6 +1597,11 @@ img {
 .bg-blue-600{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .bg-sky-500{
@@ -1539,19 +1663,37 @@ img {
   background-color: rgb(17 24 39 / 0.5);
 }
 
-.bg-gray-800{
+.bg-blue-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
-.bg-gray-50{
+.bg-yellow-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
-.bg-black{
+.bg-red-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-clip-padding{
+  background-clip: padding-box;
+}
+
+.bg-no-repeat{
+  background-repeat: no-repeat;
 }
 
 .object-contain{
@@ -1580,6 +1722,19 @@ img {
   padding: 0px;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-3{
+  padding: 0.75rem;
+}
+
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1595,6 +1750,11 @@ img {
   padding-bottom: 0.75rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1608,11 +1768,6 @@ img {
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .py-4{
@@ -1640,9 +1795,14 @@ img {
   padding-right: 1.25rem;
 }
 
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.py-1\.5{
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pt-10{
@@ -1665,16 +1825,16 @@ img {
   padding-top: 2rem;
 }
 
+.pt-4{
+  padding-top: 1rem;
+}
+
 .pb-6{
   padding-bottom: 1.5rem;
 }
 
 .pb-2{
   padding-bottom: 0.5rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
 }
 
 .pt-28{
@@ -1717,8 +1877,44 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-20{
-  padding-top: 5rem;
+.pl-6{
+  padding-left: 1.5rem;
+}
+
+.pl-8{
+  padding-left: 2rem;
+}
+
+.pl-10{
+  padding-left: 2.5rem;
+}
+
+.pl-4{
+  padding-left: 1rem;
+}
+
+.pr-8{
+  padding-right: 2rem;
+}
+
+.pr-16{
+  padding-right: 4rem;
+}
+
+.pr-24{
+  padding-right: 6rem;
+}
+
+.pr-28{
+  padding-right: 7rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .text-left{
@@ -1729,18 +1925,27 @@ img {
   text-align: center;
 }
 
+.text-right{
+  text-align: right;
+}
+
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-3xl{
@@ -1753,19 +1958,9 @@ img {
   line-height: 1.75rem;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .text-xl{
@@ -1773,14 +1968,14 @@ img {
   line-height: 1.75rem;
 }
 
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-medium{
@@ -1801,10 +1996,6 @@ img {
 
 .font-thin{
   font-weight: 100;
-}
-
-.uppercase{
-  text-transform: uppercase;
 }
 
 .text-gray-600{
@@ -1835,11 +2026,6 @@ img {
 .text-zinc-700{
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
-}
-
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 
 .text-zinc-800{
@@ -1917,6 +2103,16 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
+.text-zinc-300{
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
+}
+
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(161 161 170 / var(--tw-placeholder-opacity));
@@ -1964,6 +2160,10 @@ img {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-0{
+  outline-width: 0px;
 }
 
 .ring-2{
@@ -2066,13 +2266,53 @@ img {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-100:hover{
+  --tw-text-opacity: 1;
+  color: rgb(219 234 254 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .hover\:text-blue-500:hover{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
 .focus\:border-transparent:focus{
   border-color: transparent;
+}
+
+.focus\:border-blue-600:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+
+.focus\:bg-white:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-black:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.focus\:text-gray-700:focus{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -2105,17 +2345,49 @@ img {
   .sm\:w-72{
     width: 18rem;
   }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 768px){
 
-  .md\:px-32{
-    padding-left: 8rem;
-    padding-right: 8rem;
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1024px){
+
+  .lg\:static{
+    position: static;
+  }
+
+  .lg\:relative{
+    position: relative;
+  }
+
+  .lg\:sticky{
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
+  .lg\:left-0{
+    left: 0px;
+  }
+
+  .lg\:top-10{
+    top: 2.5rem;
+  }
+
+  .lg\:z-\[1\]{
+    z-index: 1;
+  }
 
   .lg\:order-1{
     order: 1;
@@ -2131,6 +2403,10 @@ img {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
+  }
+
+  .lg\:col-span-4{
+    grid-column: span 4 / span 4;
   }
 
   .lg\:mb-0{
@@ -2153,12 +2429,24 @@ img {
     display: none;
   }
 
+  .lg\:h-auto{
+    height: auto;
+  }
+
   .lg\:w-\[1024px\]{
     width: 1024px;
   }
 
   .lg\:w-64{
     width: 16rem;
+  }
+
+  .lg\:w-72{
+    width: 18rem;
+  }
+
+  .lg\:w-60{
+    width: 15rem;
   }
 
   .lg\:scale-90{
@@ -2175,16 +2463,24 @@ img {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-5{
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
   .lg\:flex-row{
     flex-direction: row;
   }
 
   .lg\:flex-col{
     flex-direction: column;
-  }
-
-  .lg\:items-start{
-    align-items: flex-start;
   }
 
   .lg\:items-center{
@@ -2211,6 +2507,11 @@ img {
     gap: 1.5rem;
   }
 
+  .lg\:bg-white{
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
   .lg\:p-7{
     padding: 1.75rem;
   }
@@ -2220,21 +2521,36 @@ img {
     padding-right: 2.5rem;
   }
 
-  .lg\:pl-72{
-    padding-left: 18rem;
+  .lg\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .lg\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
   .lg\:pt-0{
     padding-top: 0px;
   }
 
+  .lg\:pl-72{
+    padding-left: 18rem;
+  }
+
   .lg\:text-left{
     text-align: left;
   }
 
-  .lg\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .lg\:text-2xl{
@@ -2242,9 +2558,9 @@ img {
     line-height: 2rem;
   }
 
-  .lg\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:opacity-0{
