--- a/public/css/app.css
+++ b/public/css/app.css
@@ -738,6 +738,10 @@ body {
 .relative{
   position: relative;
 }
+.sticky{
+  position: -webkit-sticky;
+  position: sticky;
+}
 .top-3{
   top: 0.75rem;
 }
@@ -750,11 +754,11 @@ body {
 .left-0{
   left: 0px;
 }
-.-left-32{
-  left: -8rem;
-}
 .top-10{
   top: 2.5rem;
+}
+.-right-3{
+  right: -0.75rem;
 }
 .top-1{
   top: 0.25rem;
@@ -774,23 +778,41 @@ body {
 .right-4{
   right: 1rem;
 }
-.top-8{
-  top: 2rem;
+.top-20{
+  top: 5rem;
 }
-.top-9{
-  top: 2.25rem;
+.top-14{
+  top: 3.5rem;
 }
-.-left-3{
-  left: -0.75rem;
+.-right-6{
+  right: -1.5rem;
 }
-.-right-3{
-  right: -0.75rem;
+.-right-8{
+  right: -2rem;
 }
 .-right-2{
   right: -0.5rem;
 }
-.-right-4{
-  right: -1rem;
+.-right-0{
+  right: -0px;
+}
+.right-10{
+  right: 2.5rem;
+}
+.top-8{
+  top: 2rem;
+}
+.top-5{
+  top: 1.25rem;
+}
+.right-5{
+  right: 1.25rem;
+}
+.-left-0{
+  left: -0px;
+}
+.-left-full{
+  left: -100%;
 }
 .z-\[3\]{
   z-index: 3;
@@ -816,6 +838,15 @@ body {
 .col-span-12{
   grid-column: span 12 / span 12;
 }
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+.col-span-4{
+  grid-column: span 4 / span 4;
+}
+.m-0{
+  margin: 0px;
+}
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -835,6 +866,10 @@ body {
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
+}
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 .mt-4{
   margin-top: 1rem;
@@ -875,6 +910,18 @@ body {
 .mb-3{
   margin-bottom: 0.75rem;
 }
+.mb-12{
+  margin-bottom: 3rem;
+}
+.mt-8{
+  margin-top: 2rem;
+}
+.ml-0{
+  margin-left: 0px;
+}
+.mt-10{
+  margin-top: 2.5rem;
+}
 .block{
   display: block;
 }
@@ -889,6 +936,12 @@ body {
 }
 .hidden{
   display: none;
+}
+.h-28{
+  height: 7rem;
+}
+.h-64{
+  height: 16rem;
 }
 .h-12{
   height: 3rem;
@@ -914,14 +967,14 @@ body {
 .h-auto{
   height: auto;
 }
+.h-10{
+  height: 2.5rem;
+}
 .h-7{
   height: 1.75rem;
 }
 .h-16{
   height: 4rem;
-}
-.h-10{
-  height: 2.5rem;
 }
 .h-14{
   height: 3.5rem;
@@ -932,14 +985,26 @@ body {
 .h-5{
   height: 1.25rem;
 }
-.h-64{
-  height: 16rem;
+.h-56{
+  height: 14rem;
+}
+.h-60{
+  height: 15rem;
+}
+.h-72{
+  height: 18rem;
+}
+.h-40{
+  height: 10rem;
+}
+.h-6{
+  height: 1.5rem;
+}
+.h-20{
+  height: 5rem;
 }
 .h-24{
   height: 6rem;
-}
-.h-28{
-  height: 7rem;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
@@ -950,17 +1015,23 @@ body {
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
 }
+.w-28{
+  width: 7rem;
+}
+.w-72{
+  width: 18rem;
+}
 .w-full{
   width: 100%;
 }
 .w-3\/4{
   width: 75%;
 }
-.w-1\/2{
-  width: 50%;
-}
 .w-1\/3{
   width: 33.333333%;
+}
+.w-1\/2{
+  width: 50%;
 }
 .w-96{
   width: 24rem;
@@ -968,14 +1039,8 @@ body {
 .w-3\/5{
   width: 60%;
 }
-.w-28{
-  width: 7rem;
-}
 .w-3{
   width: 0.75rem;
-}
-.w-72{
-  width: 18rem;
 }
 .w-7{
   width: 1.75rem;
@@ -998,14 +1063,26 @@ body {
 .w-5{
   width: 1.25rem;
 }
-.w-screen{
-  width: 100vw;
+.w-6{
+  width: 1.5rem;
 }
-.w-48{
-  width: 12rem;
+.w-20{
+  width: 5rem;
 }
-.w-24{
-  width: 6rem;
+.w-32{
+  width: 8rem;
+}
+.w-1{
+  width: 0.25rem;
+}
+.w-10{
+  width: 2.5rem;
+}
+.w-12{
+  width: 3rem;
+}
+.w-16{
+  width: 4rem;
 }
 .min-w-full{
   min-width: 100%;
@@ -1024,12 +1101,6 @@ body {
 }
 .grow{
   flex-grow: 1;
-}
-.table-auto{
-  table-layout: auto;
-}
-.border-collapse{
-  border-collapse: collapse;
 }
 .origin-top-right{
   transform-origin: top right;
@@ -1086,8 +1157,10 @@ body {
 .resize{
   resize: both;
 }
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1098,8 +1171,11 @@ body {
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.grid-cols-10{
-  grid-template-columns: repeat(10, minmax(0, 1fr));
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-row{
   flex-direction: row;
@@ -1113,26 +1189,32 @@ body {
 .items-center{
   align-items: center;
 }
+.items-stretch{
+  align-items: stretch;
+}
 .justify-center{
   justify-content: center;
 }
 .justify-between{
   justify-content: space-between;
 }
-.gap-12{
-  gap: 3rem;
+.justify-around{
+  justify-content: space-around;
+}
+.gap-10{
+  gap: 2.5rem;
 }
 .gap-4{
   gap: 1rem;
 }
-.gap-6{
-  gap: 1.5rem;
-}
 .gap-2{
   gap: 0.5rem;
 }
-.gap-10{
-  gap: 2.5rem;
+.gap-12{
+  gap: 3rem;
+}
+.gap-6{
+  gap: 1.5rem;
 }
 .gap-3{
   gap: 0.75rem;
@@ -1143,20 +1225,14 @@ body {
 .gap-5{
   gap: 1.25rem;
 }
-.gap-56{
-  gap: 14rem;
+.gap-20{
+  gap: 5rem;
 }
-.gap-40{
-  gap: 10rem;
+.gap-y-4{
+  row-gap: 1rem;
 }
-.gap-32{
-  gap: 8rem;
-}
-.gap-24{
-  gap: 6rem;
-}
-.gap-36{
-  gap: 9rem;
+.gap-y-10{
+  row-gap: 2.5rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1204,9 +1280,6 @@ body {
 .rounded-md{
   border-radius: 0.375rem;
 }
-.rounded-3xl{
-  border-radius: 1.5rem;
-}
 .border{
   border-width: 1px;
 }
@@ -1232,12 +1305,22 @@ body {
 .border-l-2{
   border-left-width: 2px;
 }
+.border-l{
+  border-left-width: 1px;
+}
+.border-r{
+  border-right-width: 1px;
+}
 .border-solid{
   border-style: solid;
 }
 .border-zinc-300{
   --tw-border-opacity: 1;
   border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 .border-zinc-200{
   --tw-border-opacity: 1;
@@ -1266,13 +1349,21 @@ body {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
-.border-gray-200{
+.border-blue-500{
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+.border-zinc-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(161 161 170 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-gray-100{
   --tw-bg-opacity: 1;
@@ -1281,6 +1372,10 @@ body {
 .bg-blue-600{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .bg-sky-500{
   --tw-bg-opacity: 1;
@@ -1329,17 +1424,31 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
-.bg-gray-800{
+.bg-blue-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
-.bg-gray-50{
+.bg-yellow-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
-.bg-black{
+.bg-red-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.bg-slate-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+.bg-blue-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+.bg-clip-padding{
+  background-clip: padding-box;
+}
+.bg-no-repeat{
+  background-repeat: no-repeat;
 }
 .object-contain{
   -o-object-fit: contain;
@@ -1361,6 +1470,16 @@ body {
 .p-0{
   padding: 0px;
 }
+.p-2{
+  padding: 0.5rem;
+}
+.p-3{
+  padding: 0.75rem;
+}
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1373,6 +1492,10 @@ body {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1384,10 +1507,6 @@ body {
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 .py-4{
   padding-top: 1rem;
@@ -1409,9 +1528,13 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.py-1\.5{
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .pt-10{
   padding-top: 2.5rem;
@@ -1428,14 +1551,14 @@ body {
 .pt-8{
   padding-top: 2rem;
 }
+.pt-4{
+  padding-top: 1rem;
+}
 .pb-6{
   padding-bottom: 1.5rem;
 }
 .pb-2{
   padding-bottom: 0.5rem;
-}
-.pt-4{
-  padding-top: 1rem;
 }
 .pt-28{
   padding-top: 7rem;
@@ -1467,8 +1590,35 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pt-20{
-  padding-top: 5rem;
+.pl-6{
+  padding-left: 1.5rem;
+}
+.pl-8{
+  padding-left: 2rem;
+}
+.pl-10{
+  padding-left: 2.5rem;
+}
+.pl-4{
+  padding-left: 1rem;
+}
+.pr-8{
+  padding-right: 2rem;
+}
+.pr-16{
+  padding-right: 4rem;
+}
+.pr-24{
+  padding-right: 6rem;
+}
+.pr-28{
+  padding-right: 7rem;
+}
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+.pt-3{
+  padding-top: 0.75rem;
 }
 .text-left{
   text-align: left;
@@ -1476,16 +1626,23 @@ body {
 .text-center{
   text-align: center;
 }
+.text-right{
+  text-align: right;
+}
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
 }
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .text-3xl{
   font-size: 1.875rem;
@@ -1495,29 +1652,21 @@ body {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
 }
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 .font-medium{
   font-weight: 500;
@@ -1533,9 +1682,6 @@ body {
 }
 .font-thin{
   font-weight: 100;
-}
-.uppercase{
-  text-transform: uppercase;
 }
 .text-gray-600{
   --tw-text-opacity: 1;
@@ -1560,10 +1706,6 @@ body {
 .text-zinc-700{
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
-}
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 .text-zinc-800{
   --tw-text-opacity: 1;
@@ -1625,6 +1767,14 @@ body {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+.text-zinc-300{
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
+}
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(161 161 170 / var(--tw-placeholder-opacity));
@@ -1663,6 +1813,9 @@ body {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-0{
+  outline-width: 0px;
 }
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1748,13 +1901,53 @@ body {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-100:hover{
+  --tw-text-opacity: 1;
+  color: rgb(219 234 254 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .hover\:text-blue-500:hover{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
 .focus\:border-transparent:focus{
   border-color: transparent;
+}
+
+.focus\:border-blue-600:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+
+.focus\:bg-white:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-black:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.focus\:text-gray-700:focus{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -1789,18 +1982,58 @@ body {
   .sm\:w-72{
     width: 18rem;
   }
+
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 768px){
 
 
-  .md\:px-32{
-    padding-left: 8rem;
-    padding-right: 8rem;
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1024px){
+
+
+  .lg\:static{
+    position: static;
+  }
+
+
+  .lg\:relative{
+    position: relative;
+  }
+
+
+  .lg\:sticky{
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
+
+  .lg\:left-0{
+    left: 0px;
+  }
+
+
+  .lg\:top-10{
+    top: 2.5rem;
+  }
+
+
+  .lg\:z-\[1\]{
+    z-index: 1;
+  }
 
 
   .lg\:order-1{
@@ -1820,6 +2053,11 @@ body {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
+  }
+
+
+  .lg\:col-span-4{
+    grid-column: span 4 / span 4;
   }
 
 
@@ -1848,6 +2086,11 @@ body {
   }
 
 
+  .lg\:h-auto{
+    height: auto;
+  }
+
+
   .lg\:w-\[1024px\]{
     width: 1024px;
   }
@@ -1855,6 +2098,16 @@ body {
 
   .lg\:w-64{
     width: 16rem;
+  }
+
+
+  .lg\:w-72{
+    width: 18rem;
+  }
+
+
+  .lg\:w-60{
+    width: 15rem;
   }
 
 
@@ -1875,6 +2128,21 @@ body {
   }
 
 
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+
+  .lg\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+
+  .lg\:grid-cols-5{
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+
   .lg\:flex-row{
     flex-direction: row;
   }
@@ -1882,11 +2150,6 @@ body {
 
   .lg\:flex-col{
     flex-direction: column;
-  }
-
-
-  .lg\:items-start{
-    align-items: flex-start;
   }
 
 
@@ -1920,6 +2183,12 @@ body {
   }
 
 
+  .lg\:bg-white{
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+
   .lg\:p-7{
     padding: 1.75rem;
   }
@@ -1931,8 +2200,21 @@ body {
   }
 
 
-  .lg\:pl-72{
-    padding-left: 18rem;
+  .lg\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+
+  .lg\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+
+  .lg\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
 
@@ -1941,14 +2223,19 @@ body {
   }
 
 
+  .lg\:pl-72{
+    padding-left: 18rem;
+  }
+
+
   .lg\:text-left{
     text-align: left;
   }
 
 
-  .lg\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
 
@@ -1958,9 +2245,9 @@ body {
   }
 
 
-  .lg\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
 
